added more code

--- a/my_custom_function.ipynb
+++ b/my_custom_function.ipynb
@@ -24,6 +24,15 @@
     "\n",
     "abs(-8)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding more code later that I forgot about earlier today"
+   ]
   }
  ],
  "metadata": {
